# orion

./: .dockerignore  .env.example  .gitignore  AUDIT_EXECUTIVE_SUMMARY.md  DASHBOARD_USAGE.md  Dockerfile  EASY_START_GUIDE.md  Makefile  Orion Dashboard.html  PRE_PROD_AUDIT_REPORT.md  PRODUCTION_READY_CHANGES.md  PRODUCTION_SETUP.md  README.md  SECURITY.md  SETUP_FOR_DUMMIES.md  Start Orion.command  Stop Orion.command  dashboard.py  docker-compose.yml  main.py  migrate_database.py  pyproject.toml  requirements.txt
backend/: requirements.txt  routers.json
backend/app/apis/config/: __init__.py
backend/app/apis/economics/: __init__.py
backend/app/apis/enverus_direct_api/: __init__.py
backend/app/apis/forecast_table/: __init__.py
config/: config.yaml
docs/: API_SETUP_GUIDE.md  CAPITAL_VELOCITY_GUIDE.md  CUOMO_TRADE_ANALYSIS.md  RISK_GUIDE.md
examples/: bidirectional_arbitrage_example.py  capital_velocity_example.py  cuomo_trade_example.py
frontend/: package.json  tailwind.config.js
scripts/: start_orion.sh  stop_orion.sh
src/: __init__.py  engine.py
src/api/: __init__.py  kalshi_client.py  polymarket_client.py
src/arbitrage/: __init__.py  detector.py  matcher.py  risk_analyzer.py
src/database/: __init__.py  models.py  repository.py
src/execution/: __init__.py  capital_manager.py  circuit_breaker.py  executor.py
src/monitoring/: __init__.py  alerts.py
src/utils/: __init__.py  config.py  logger.py  secrets_manager.py  validation.py
tests/: __init__.py  test_detector.py  test_matcher.py
